feat: 퀴즈 진입 페이지 추가

--- a/PayKids/presentation/src/main/res/values/strings.xml
+++ b/PayKids/presentation/src/main/res/values/strings.xml
@@ -13,4 +13,10 @@
 
     <!-- 홈 화면 -->
     <string name="text_tooltip_start">시작하기</string>
+
+    <!-- 퀴즈 진입 화면 -->
+    <string name="text_btn_study">학습하기</string>
+    <string name="text_btn_quiz">퀴즈 풀기</string>
+    <string name="text_btn_review">오답노트 풀기</string>
+
 </resources>
