[PAY-008] bottomNavigation, 홈 화면 임시, 퀴즈 진입 페이지 (#9)
* setting: balloon implementation

* refactor: 임시 홈 화면 MyPage로 이동

* style: red색상 변경

* feat: 홈 화면 balloon, stage 도형  추가

* refactor: signActivity에서 Home으로 넘어가게 수정

* fix: 닉네임 최대 글자수 8로 변경

* feat: Bottom Navigation 추가

* fix: bottom nav에 맞게 xml 수정

* feat: 용돈일기 페이지 임시 생성

* feat: HomeActivity에 바텀 nav연결

* fix: 임시로 홈 화면으로 넘기게 수정

* style: remove unused import

* fix: 화면 임시 이동

* style: 버튼 height 조정

* feat: myPage 패이지 view 추가

* style: radius 100 shape 추가

* feat: 퀴즈 진입 페이지 추가

* feat: 홈 화면에서 퀴즈 진입 페이지로 이동

* refactor: home 화면 stage 간격 조절

* style: remove unused import

* feat: mypage strings 변수화

* refactor: 로그인 버튼 높이 수정

* refactor: 기타 코드 수정

* refactor: stage ClickListener 메소드 줄이기

--- a/PayKids/presentation/src/main/res/values/strings.xml
+++ b/PayKids/presentation/src/main/res/values/strings.xml
@@ -9,5 +9,21 @@
     <string name="hint_set_nickname">닉네임을 입력해주세요</string>
     <string name="text_validate_nickname">멋진 닉네임이네요!</string>
     <string name="text_confirm_nickname">결정하기</string>
-    <string name="text_nickname_condition">* 한글, 영어 최대 14자 이내 작성, 공백 입력 불가능</string>
+    <string name="text_nickname_condition">* 한글, 영어 최대 8자 이내 작성, 공백 입력 불가능</string>
+
+    <!-- 홈 화면 -->
+    <string name="text_tooltip_start">시작하기</string>
+
+    <!-- 퀴즈 진입 화면 -->
+    <string name="text_btn_study">학습하기</string>
+    <string name="text_btn_quiz">퀴즈 풀기</string>
+    <string name="text_btn_review">오답노트 풀기</string>
+
+    <!-- 마이 페이지 -->
+    <string name="content_description_profile">프로필 이미지</string>
+    <string name="text_my_page">마이 페이지</string>
+    <string name="text_my_info">내 정보</string>
+    <string name="text_policy">약관 및 정책</string>
+    <string name="text_app_version">앱 버전</string>
+    <string name="text_logout">로그아웃</string>
 </resources>
