--- a/PayKids/presentation/src/main/res/values/strings.xml
+++ b/PayKids/presentation/src/main/res/values/strings.xml
@@ -27,4 +27,10 @@
     <string name="text_policy">약관 및 정책</string>
     <string name="text_app_version">앱 버전</string>
     <string name="text_logout">로그아웃</string>
+
+    <!-- 바텀 내비게이션 메뉴 -->
+    <string name="text_diary_menu">용돈일기</string>
+    <string name="text_home_menu">홈</string>
+    <string name="text_mypage_menu">마이</string>
+
 </resources>
