[PAY-009] design system 추가 (#10)
* style: 배경 이미지 추가

- 소셜로그인, 퀴즈 진입 페이지, 퀴즈 정답 페이지, 퀴즈 오답 페이지, 퀴즈 클리어 페이지, 퀴즈 default 페이지

* style: 배경 이미지 해상도 변경

* style: splash logo 수정

* style: 색깔 추가, 버튼 색 수정

- gray5, gray8 추가

* style: 소셜 로그인 페이지 배경 변경, margin 수정

* style: 퀴즈 진입 페이지 배경 변경, text style 변경

* style: 닉네임 설정 화면 배경 변경

* style: icon 추가

- 바텀 내비게이션 diary, home, mypage
- left, right 아이콘 추가

* refactor: 버튼 shape 이름 변경

* style: mypage 버튼 radius shape 추가

* refactor: myPage 페이지 수정

* style: home 화면 수정

* style: bottomNav 색깔 수정

* style: bottomNav 아이콘, label텍스트 수정

* chore: 기타 수정

* style: mypage header dimens에 추가

* style: stroke width 추가

* chore: 기타 수정

--- a/PayKids/presentation/src/main/res/values/strings.xml
+++ b/PayKids/presentation/src/main/res/values/strings.xml
@@ -23,7 +23,14 @@
     <string name="content_description_profile">프로필 이미지</string>
     <string name="text_my_page">마이 페이지</string>
     <string name="text_my_info">내 정보</string>
+    <string name="text_modify_my_info">수정하기</string>
     <string name="text_policy">약관 및 정책</string>
     <string name="text_app_version">앱 버전</string>
     <string name="text_logout">로그아웃</string>
+
+    <!-- 바텀 내비게이션 메뉴 -->
+    <string name="text_diary_menu">용돈일기</string>
+    <string name="text_home_menu">홈</string>
+    <string name="text_mypage_menu">마이</string>
+
 </resources>
